--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   <meta name="description" content="1win: промокод SMOG при регистрации, быстрый старт, мини-калькулятор бонуса, FAQ." />
   <meta name="robots" content="index,follow,max-image-preview:large" />
 
+  <link rel="icon" href="./favicon.ico?v=2" sizes="any">
+  <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32.png?v=2">
+  <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16.png?v=2">
+  <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png?v=2">
+
+
   <script>document.documentElement.classList.add('js');</script>
 
   <style>
