--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>1win — бонусы, промокод, FAQ</title>
   <meta name="description" content="1win: промокод SMOG при регистрации, быстрый старт, мини-калькулятор бонуса, FAQ." />
   <meta name="robots" content="index,follow,max-image-preview:large" />
+  <meta name="google-site-verification" content="eWBC66ZZM0HzLTyX5ZMmXEy0ijZVKgxDnuGBw_2L30U" />
 
   <link rel="icon" href="./favicon.ico?v=1" sizes="any">
   <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png?v=1">
@@ -1352,4 +1353,5 @@
     revealTargets.forEach(el => io.observe(el));
   </script>
 </body>
+
 </html>
